@@ -2436,6 +2436,17 @@ operator|.
 name|LazyContentStream
 condition|)
 block|{
+name|Long
+name|size
+init|=
+name|contentStream
+index|[
+literal|0
+index|]
+operator|.
+name|getSize
+argument_list|()
+decl_stmt|;
 name|postOrPut
 operator|.
 name|setEntity
@@ -2451,8 +2462,14 @@ operator|.
 name|getStream
 argument_list|()
 argument_list|,
+name|size
+operator|==
+literal|null
+condition|?
 operator|-
 literal|1
+else|:
+name|size
 argument_list|)
 block|{
 annotation|@
@@ -2495,6 +2512,17 @@ expr_stmt|;
 block|}
 else|else
 block|{
+name|Long
+name|size
+init|=
+name|contentStream
+index|[
+literal|0
+index|]
+operator|.
+name|getSize
+argument_list|()
+decl_stmt|;
 name|postOrPut
 operator|.
 name|setEntity
@@ -2510,8 +2538,14 @@ operator|.
 name|getStream
 argument_list|()
 argument_list|,
+name|size
+operator|==
+literal|null
+condition|?
 operator|-
 literal|1
+else|:
+name|size
 argument_list|)
 block|{
 annotation|@
