@@ -92,6 +92,15 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|UnsupportedEncodingException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|URL
@@ -562,6 +571,8 @@ name|name
 operator|=
 literal|null
 expr_stmt|;
+try|try
+block|{
 name|size
 operator|=
 operator|new
@@ -569,10 +580,30 @@ name|Long
 argument_list|(
 name|str
 operator|.
+name|getBytes
+argument_list|(
+name|DEFAULT_CHARSET
+argument_list|)
+operator|.
 name|length
-argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnsupportedEncodingException
+name|e
+parameter_list|)
+block|{
+comment|// won't happen
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 name|sourceInfo
 operator|=
 literal|"string"
